# aptos-simple-escrow

./: .gitignore  Move.toml  README.md
scripts/: pyproject.toml
scripts/escrow/: coin.py  escrow_sdk.py  example.py  url_tool.py
sources/: Escrow.move  TestCoins.move
