[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["dean <dean@superposition.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
PyNaCl = "^1.5.0"
httpx = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
